Resample cloud sheets and fix texture map multi-name handling
- Resample non-256x256 cloud sheets onto modern's one-pixel-per-cell grid
- Make TextureNameMaps a multi-map so split files (e.g. dye_powder_white)
  announce every modern name instead of one at random
- Fall back to the modern name in resolveTexture so packs shipping
  post-flattening names in pre-flattening trees serve and announce alike
- Add ~15 missing block texture mappings and drop the dead crossbow entry